<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ly_interactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw">

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/like"
            android:textColor="@color/searchColor"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/likeicon" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/commenticon"
            android:padding="10dp"
            android:text="@string/comment"
            android:textColor="@color/searchColor"
            android:textSize="16sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/share"
            android:textColor="@color/searchColor"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/shareicon" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/unblast"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_2hrs"
        android:textColor="#78909C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/world"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_post"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autoLink="web"
        android:text="@string/buckle_up_because_change_is_coming_to_wordpress_http_unblast_com_color_schemes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <ImageView
        android:id="@+id/iv_post"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/postbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_post" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/fblike"
        app:layout_constraintStart_toStartOf="@+id/iv_post"
        app:layout_constraintTop_toBottomOf="@+id/iv_post"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"

        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/_1_share"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_likes"
        app:layout_constraintEnd_toStartOf="@+id/iv_share"
        app:layout_constraintTop_toTopOf="@+id/tv_likes"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_editpost"
        android:layout_width="35dp"
        android:layout_height="35dp"

        android:layout_marginEnd="4dp"
        android:src="@drawable/dots_three_bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_share"
        app:layout_constraintEnd_toStartOf="@+id/iv_arrow"
        app:layout_constraintTop_toTopOf="@+id/tv_share" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/downarrow"
        app:layout_constraintBottom_toBottomOf="@+id/iv_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_share"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/vw"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grayColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_share" />

</androidx.constraintlayout.widget.ConstraintLayout>